Added relation of incomparability

--- a/proj1.ipynb
+++ b/proj1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "26  0.80  0.06  1.00  0.67"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,11 +291,11 @@
     "- 13 i 25 - para 28 \n",
     "- 7 i 8 - para 36\n",
     "\n",
-    "Nasza preferencja zakłda wybór wariantów o niższej sumie wartości krytriów c3 i c4. W efekcie:\n",
+    "Nasza preferencja zakłda wybór wariantów gdzie oba kryteria, c3 i c4, są niższe. W efekcie:\n",
     "\n",
-    "- 3 jest preferowane nad 17\n",
+    "- 3 jest nierozróżnialne z 17\n",
     "- 11 jest preferowane nad 14\n",
-    "- 0 jest preferowane nad 11\n",
+    "- 0 jest nierozróżnialne z 11\n",
     "- 13 jest preferowane nad 25\n",
     "- 7 jest preferowane nad 8\n",
     "\n"
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,9 +402,9 @@
     "# Add constraints:\n",
     "\n",
     "# preferations\n",
-    "prob += u1_48 + u2_87 + u3_0 + u4_75 >= u1_76 + u2_6 + u3_100 + u4_60 + e, \"3 prefered over 17\"\n",
+    "prob += u1_48 + u2_87 + u3_0 + u4_75 == u1_76 + u2_6 + u3_100 + u4_60, \"3 incomparable with 17\"\n",
     "prob += u1_74 + u2_25 + u3_80 + u4_49 >= u1_87 + u2_3 + u3_100 + u4_61 + e, \"11 prefered over 14\"\n",
-    "prob += u1_60 + u2_93 + u3_0 + u4_73 >= u1_74 + u2_25 + u3_80 + u4_49 + e, \"0 prefered over 11\"\n",
+    "prob += u1_60 + u2_93 + u3_0 + u4_73 == u1_74 + u2_25 + u3_80 + u4_49 , \"0 incomparable with 11\"\n",
     "prob += u1_69 + u2_49 + u3_56 + u4_61 >= u1_71 + u2_25 + u3_88 + u4_67 + e, \"13 prefered over 25\"\n",
     "prob += u1_64 + u2_44 + u3_54 + u4_54 >= u1_65 + u2_30 + u3_71 + u4_55 + e, \"7 prefered over 8\"\n",
     "\n",
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -438,22 +438,20 @@
        "MAXIMIZE\n",
        "1*e + 0\n",
        "SUBJECT TO\n",
-       "3_prefered_over_17: - e + u1_48 - u1_76 - u2_6 + u2_87 + u3_0 - u3_100 - u4_60\n",
-       " + u4_75 >= 0\n",
+       "3_incomparable_with_17: u1_48 - u1_76 - u2_6 + u2_87 + u3_0 - u3_100 - u4_60\n",
+       " + u4_75 = 0\n",
        "\n",
        "11_prefered_over_14: - e + u1_74 - u1_87 - u2_03 + u2_25 - u3_100 + u3_80\n",
        " + u4_49 - u4_61 >= 0\n",
        "\n",
-       "0_prefered_over_11: - e + u1_60 - u1_74 - u2_25 + u2_93 + u3_0 - u3_80 - u4_49\n",
-       " + u4_73 >= 0\n",
+       "0_incomparable_with_11: u1_60 - u1_74 - u2_25 + u2_93 + u3_0 - u3_80 - u4_49\n",
+       " + u4_73 = 0\n",
        "\n",
        "13_prefered_over_25: - e + u1_69 - u1_71 - u2_25 + u2_49 + u3_56 - u3_88\n",
        " + u4_61 - u4_67 >= 0\n",
        "\n",
        "7_prefered_over_8: - e + u1_64 - u1_65 - u2_30 + u2_44 + u3_54 - u3_71 + u4_54\n",
        " - u4_55 >= 0\n",
-       "\n",
-       "normalization: u1_32 + u2_03 + u3_0 + u4_49 = 1\n",
        "\n",
        "u1_min: u1_100 = 0\n",
        "\n",
@@ -567,7 +565,7 @@
        "u4_75 Continuous"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,48 +576,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status: Optimal\n",
-      "e = 0.5\n",
+      "Status: Unbounded\n",
+      "e = 1.6e-11\n",
       "u1_100 = 0.0\n",
       "u1_32 = 0.0\n",
       "u1_48 = 0.0\n",
-      "u1_60 = 0.0\n",
-      "u1_64 = 0.0\n",
-      "u1_65 = 0.0\n",
-      "u1_69 = 0.0\n",
+      "u1_60 = 1e-12\n",
+      "u1_64 = 2e-12\n",
+      "u1_65 = -2e-12\n",
+      "u1_69 = -1e-12\n",
       "u1_71 = 0.0\n",
-      "u1_74 = 0.0\n",
-      "u1_76 = 0.0\n",
+      "u1_74 = 1e-12\n",
+      "u1_76 = 2e-12\n",
       "u1_87 = 0.0\n",
-      "u2_03 = -0.0\n",
+      "u2_03 = 0.0\n",
       "u2_100 = 0.0\n",
       "u2_25 = 0.0\n",
       "u2_30 = 0.0\n",
-      "u2_44 = 0.0\n",
-      "u2_49 = 0.0\n",
-      "u2_6 = -0.0\n",
+      "u2_44 = 1e-12\n",
+      "u2_49 = 1e-12\n",
+      "u2_6 = 1e-12\n",
       "u2_87 = 0.0\n",
       "u2_93 = 0.0\n",
-      "u3_0 = 1.0\n",
+      "u3_0 = 4e-12\n",
       "u3_100 = 0.0\n",
-      "u3_54 = 1.0\n",
-      "u3_56 = 1.0\n",
-      "u3_71 = 0.5\n",
-      "u3_80 = 0.5\n",
+      "u3_54 = 5e-12\n",
+      "u3_56 = 5e-12\n",
+      "u3_71 = 0.0\n",
+      "u3_80 = 0.0\n",
       "u3_88 = 0.0\n",
       "u4_100 = 0.0\n",
-      "u4_49 = 0.0\n",
-      "u4_54 = 0.0\n",
+      "u4_49 = 4e-12\n",
+      "u4_54 = 5e-12\n",
       "u4_55 = 0.0\n",
-      "u4_60 = 0.0\n",
-      "u4_61 = 0.0\n",
+      "u4_60 = 1e-12\n",
+      "u4_61 = 4e-12\n",
       "u4_67 = 0.0\n",
       "u4_73 = 0.0\n",
       "u4_75 = 0.0\n"
@@ -638,17 +636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[-0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[1.0, 1.0, 1.0, 0.5, 0.5, 0.0, 0.0]\n",
-      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "[0.0, 0.0, 1e-12, 2e-12, -2e-12, -1e-12, 0.0, 1e-12, 2e-12, 0.0, 0.0]\n",
+      "[0.0, 1e-12, 0.0, 0.0, 1e-12, 1e-12, 0.0, 0.0, 0.0]\n",
+      "[4e-12, 5e-12, 5e-12, 0.0, 0.0, 0.0, 0.0]\n",
+      "[4e-12, 5e-12, 0.0, 1e-12, 4e-12, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
