changed one pair

--- a/proj1.ipynb
+++ b/proj1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "26  0.80  0.06  1.00  0.67"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,16 +360,16 @@
     "u4_73 = LpVariable(\"u4_73\", lowBound=0) # u4_73>=0\n",
     "\n",
     "# variant 13\n",
-    "u1_69 = LpVariable(\"u1_69\", lowBound=0) # u1_69>=0\n",
-    "u2_49 = LpVariable(\"u2_49\", lowBound=0) # u2_49>=0\n",
-    "u3_56 = LpVariable(\"u3_56\", lowBound=0) # u3_56>=0\n",
+    "#u1_69 = LpVariable(\"u1_69\", lowBound=0) # u1_69>=0\n",
+    "#u2_49 = LpVariable(\"u2_49\", lowBound=0) # u2_49>=0\n",
+    "#u3_56 = LpVariable(\"u3_56\", lowBound=0) # u3_56>=0\n",
     "# u4_61 = LpVariable(\"u4_61\", lowBound=0) # u4_61>=0\n",
     "\n",
     "# variant 25\n",
-    "u1_71 = LpVariable(\"u1_71\", lowBound=0) # u1_71>=0\n",
+    "#u1_71 = LpVariable(\"u1_71\", lowBound=0) # u1_71>=0\n",
     "# u2_25 = LpVariable(\"u2_25\", lowBound=0) # u2_25>=0\n",
-    "u3_88 = LpVariable(\"u3_88\", lowBound=0) # u3_88>=0\n",
-    "u4_67 = LpVariable(\"u4_67\", lowBound=0) # u4_67>=0\n",
+    "#u3_88 = LpVariable(\"u3_88\", lowBound=0) # u3_88>=0\n",
+    "#u4_67 = LpVariable(\"u4_67\", lowBound=0) # u4_67>=0\n",
     "\n",
     "# variant 7\n",
     "u1_64 = LpVariable(\"u1_64\", lowBound=0) # u1_64>=0\n",
@@ -383,17 +383,23 @@
     "u3_71 = LpVariable(\"u3_71\", lowBound=0) # u3_71>=0\n",
     "u4_55 = LpVariable(\"u4_55\", lowBound=0) # u4_55>=0\n",
     "\n",
-    "u1 = [u1_32, u1_48, u1_60, u1_64, u1_65, u1_69, u1_71, u1_74, u1_76, u1_87, u1_100]\n",
-    "u2 = [u2_3, u2_6, u2_25, u2_30, u2_44, u2_49, u2_87, u2_93, u2_100]\n",
-    "u3 = [u3_0, u3_54, u3_56, u3_71, u3_80, u3_88, u3_100]\n",
-    "u4 = [u4_49, u4_54, u4_55, u4_60, u4_61, u4_67, u4_73, u4_75, u4_100]\n",
+    "# variant 9\n",
+    "u1_45 = LpVariable(\"u1_45\", lowBound=0) # u1_45>=0\n",
+    "u2_86 = LpVariable(\"u2_86\", lowBound=0) # u2_86>=0\n",
+    "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
+    "u4_73 = LpVariable(\"u4_73\", lowBound=0) # u4_73>=0\n",
+    "\n",
+    "u1 = [u1_32, u1_45, u1_48, u1_60, u1_64, u1_65, u1_74, u1_76, u1_87, u1_100]\n",
+    "u2 = [u2_3, u2_6, u2_25, u2_30, u2_44, u2_86, u2_87, u2_93, u2_100]\n",
+    "u3 = [u3_0, u3_54, u3_71, u3_80, u3_100]\n",
+    "u4 = [u4_49, u4_54, u4_55, u4_60, u4_61, u4_73, u4_75, u4_100]\n",
     "\n",
     "us = [u1, u2, u3, u4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,8 +411,9 @@
     "prob += u1_48 + u2_87 + u3_0 + u4_75 == u1_76 + u2_6 + u3_100 + u4_60, \"3 incomparable with 17\"\n",
     "prob += u1_74 + u2_25 + u3_80 + u4_49 >= u1_87 + u2_3 + u3_100 + u4_61 + e, \"11 prefered over 14\"\n",
     "prob += u1_60 + u2_93 + u3_0 + u4_73 == u1_74 + u2_25 + u3_80 + u4_49 , \"0 incomparable with 11\"\n",
-    "prob += u1_69 + u2_49 + u3_56 + u4_61 >= u1_71 + u2_25 + u3_88 + u4_67 + e, \"13 prefered over 25\"\n",
+    "#prob += u1_69 + u2_49 + u3_56 + u4_61 >= u1_71 + u2_25 + u3_88 + u4_67 + e, \"13 prefered over 25\"\n",
     "prob += u1_64 + u2_44 + u3_54 + u4_54 >= u1_65 + u2_30 + u3_71 + u4_55 + e, \"7 prefered over 8\"\n",
+    "prob += u1_45 + u2_86 + u3_0 + u4_73 >= u1_60 + u2_93 + u3_0 + u4_73 + e, \"9 prefered over 0\"\n",
     "\n",
     "# normalizations\n",
     "prob += u1_32 + u2_3 + u3_0 + u4_49 == 1, \"normalization\"\n",
@@ -428,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -447,11 +454,12 @@
        "0_incomparable_with_11: u1_60 - u1_74 - u2_25 + u2_93 + u3_0 - u3_80 - u4_49\n",
        " + u4_73 = 0\n",
        "\n",
-       "13_prefered_over_25: - e + u1_69 - u1_71 - u2_25 + u2_49 + u3_56 - u3_88\n",
-       " + u4_61 - u4_67 >= 0\n",
-       "\n",
        "7_prefered_over_8: - e + u1_64 - u1_65 - u2_30 + u2_44 + u3_54 - u3_71 + u4_54\n",
        " - u4_55 >= 0\n",
+       "\n",
+       "9_prefered_over_0: - e + u1_45 - u1_60 + u2_86 - u2_93 + 0 u3_0 + 0 u4_73 >= 0\n",
+       "\n",
+       "normalization: u1_32 + u2_03 + u3_0 + u4_49 = 1\n",
        "\n",
        "u1_min: u1_100 = 0\n",
        "\n",
@@ -461,80 +469,71 @@
        "\n",
        "u4_min: u4_100 = 0\n",
        "\n",
-       "_C1: u1_32 - u1_48 >= 0\n",
+       "_C1: u1_32 - u1_45 >= 0\n",
        "\n",
-       "_C2: u1_48 - u1_60 >= 0\n",
+       "_C2: u1_45 - u1_48 >= 0\n",
        "\n",
-       "_C3: u1_60 - u1_64 >= 0\n",
+       "_C3: u1_48 - u1_60 >= 0\n",
        "\n",
-       "_C4: u1_64 - u1_65 >= 0\n",
+       "_C4: u1_60 - u1_64 >= 0\n",
        "\n",
-       "_C5: u1_65 - u1_69 >= 0\n",
+       "_C5: u1_64 - u1_65 >= 0\n",
        "\n",
-       "_C6: u1_69 - u1_71 >= 0\n",
+       "_C6: u1_65 - u1_74 >= 0\n",
        "\n",
-       "_C7: u1_71 - u1_74 >= 0\n",
+       "_C7: u1_74 - u1_76 >= 0\n",
        "\n",
-       "_C8: u1_74 - u1_76 >= 0\n",
+       "_C8: u1_76 - u1_87 >= 0\n",
        "\n",
-       "_C9: u1_76 - u1_87 >= 0\n",
+       "_C9: - u1_100 + u1_87 >= 0\n",
        "\n",
-       "_C10: - u1_100 + u1_87 >= 0\n",
+       "_C10: u2_03 - u2_6 >= 0\n",
        "\n",
-       "_C11: u2_03 - u2_6 >= 0\n",
+       "_C11: - u2_25 + u2_6 >= 0\n",
        "\n",
-       "_C12: - u2_25 + u2_6 >= 0\n",
+       "_C12: u2_25 - u2_30 >= 0\n",
        "\n",
-       "_C13: u2_25 - u2_30 >= 0\n",
+       "_C13: u2_30 - u2_44 >= 0\n",
        "\n",
-       "_C14: u2_30 - u2_44 >= 0\n",
+       "_C14: u2_44 - u2_86 >= 0\n",
        "\n",
-       "_C15: u2_44 - u2_49 >= 0\n",
+       "_C15: u2_86 - u2_87 >= 0\n",
        "\n",
-       "_C16: u2_49 - u2_87 >= 0\n",
+       "_C16: u2_87 - u2_93 >= 0\n",
        "\n",
-       "_C17: u2_87 - u2_93 >= 0\n",
+       "_C17: - u2_100 + u2_93 >= 0\n",
        "\n",
-       "_C18: - u2_100 + u2_93 >= 0\n",
+       "_C18: u3_0 - u3_54 >= 0\n",
        "\n",
-       "_C19: u3_0 - u3_54 >= 0\n",
+       "_C19: u3_54 - u3_71 >= 0\n",
        "\n",
-       "_C20: u3_54 - u3_56 >= 0\n",
+       "_C20: u3_71 - u3_80 >= 0\n",
        "\n",
-       "_C21: u3_56 - u3_71 >= 0\n",
+       "_C21: - u3_100 + u3_80 >= 0\n",
        "\n",
-       "_C22: u3_71 - u3_80 >= 0\n",
+       "_C22: u4_49 - u4_54 >= 0\n",
        "\n",
-       "_C23: u3_80 - u3_88 >= 0\n",
+       "_C23: u4_54 - u4_55 >= 0\n",
        "\n",
-       "_C24: - u3_100 + u3_88 >= 0\n",
+       "_C24: u4_55 - u4_60 >= 0\n",
        "\n",
-       "_C25: u4_49 - u4_54 >= 0\n",
+       "_C25: u4_60 - u4_61 >= 0\n",
        "\n",
-       "_C26: u4_54 - u4_55 >= 0\n",
+       "_C26: u4_61 - u4_73 >= 0\n",
        "\n",
-       "_C27: u4_55 - u4_60 >= 0\n",
+       "_C27: u4_73 - u4_75 >= 0\n",
        "\n",
-       "_C28: u4_60 - u4_61 >= 0\n",
-       "\n",
-       "_C29: u4_61 - u4_67 >= 0\n",
-       "\n",
-       "_C30: u4_67 - u4_73 >= 0\n",
-       "\n",
-       "_C31: u4_73 - u4_75 >= 0\n",
-       "\n",
-       "_C32: - u4_100 + u4_75 >= 0\n",
+       "_C28: - u4_100 + u4_75 >= 0\n",
        "\n",
        "VARIABLES\n",
        "e Continuous\n",
        "u1_100 Continuous\n",
        "u1_32 Continuous\n",
+       "u1_45 Continuous\n",
        "u1_48 Continuous\n",
        "u1_60 Continuous\n",
        "u1_64 Continuous\n",
        "u1_65 Continuous\n",
-       "u1_69 Continuous\n",
-       "u1_71 Continuous\n",
        "u1_74 Continuous\n",
        "u1_76 Continuous\n",
        "u1_87 Continuous\n",
@@ -543,29 +542,26 @@
        "u2_25 Continuous\n",
        "u2_30 Continuous\n",
        "u2_44 Continuous\n",
-       "u2_49 Continuous\n",
        "u2_6 Continuous\n",
+       "u2_86 Continuous\n",
        "u2_87 Continuous\n",
        "u2_93 Continuous\n",
        "u3_0 Continuous\n",
        "u3_100 Continuous\n",
        "u3_54 Continuous\n",
-       "u3_56 Continuous\n",
        "u3_71 Continuous\n",
        "u3_80 Continuous\n",
-       "u3_88 Continuous\n",
        "u4_100 Continuous\n",
        "u4_49 Continuous\n",
        "u4_54 Continuous\n",
        "u4_55 Continuous\n",
        "u4_60 Continuous\n",
        "u4_61 Continuous\n",
-       "u4_67 Continuous\n",
        "u4_73 Continuous\n",
        "u4_75 Continuous"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,49 +572,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status: Unbounded\n",
-      "e = 1.6e-11\n",
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /var/data/python/lib/python3.11/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/a2b59f94e21d4ff493f7756251efc607-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/a2b59f94e21d4ff493f7756251efc607-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 43 COLUMNS\n",
+      "At line 150 RHS\n",
+      "At line 189 BOUNDS\n",
+      "At line 190 ENDATA\n",
+      "Problem MODEL has 38 rows, 33 columns and 103 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 20 (-18) rows, 19 (-14) columns and 72 (-31) elements\n",
+      "Perturbing problem by 0.001% of 1 - largest nonzero change 9.4100543e-05 ( 0.0094100543%) - largest zero change 9.3128486e-05\n",
+      "0  Obj -0 Primal inf 1.999998 (2) Dual inf 0.9999049 (1)\n",
+      "13  Obj 0.33317977\n",
+      "Optimal - objective value 0.33333333\n",
+      "After Postsolve, objective 0.33333333, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Optimal objective 0.3333333333 - 13 iterations time 0.002, Presolve 0.00\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n",
+      "Status: Optimal\n",
+      "e = 0.33333333\n",
       "u1_100 = 0.0\n",
-      "u1_32 = 0.0\n",
+      "u1_32 = 0.33333333\n",
+      "u1_45 = 0.33333333\n",
       "u1_48 = 0.0\n",
-      "u1_60 = 1e-12\n",
-      "u1_64 = 2e-12\n",
-      "u1_65 = -2e-12\n",
-      "u1_69 = -1e-12\n",
-      "u1_71 = 0.0\n",
-      "u1_74 = 1e-12\n",
-      "u1_76 = 2e-12\n",
+      "u1_60 = 0.0\n",
+      "u1_64 = 0.0\n",
+      "u1_65 = 0.0\n",
+      "u1_74 = 0.0\n",
+      "u1_76 = 0.0\n",
       "u1_87 = 0.0\n",
-      "u2_03 = 0.0\n",
+      "u2_03 = -5.5511151e-17\n",
       "u2_100 = 0.0\n",
       "u2_25 = 0.0\n",
-      "u2_30 = 0.0\n",
-      "u2_44 = 1e-12\n",
-      "u2_49 = 1e-12\n",
-      "u2_6 = 1e-12\n",
+      "u2_30 = -0.0\n",
+      "u2_44 = 0.0\n",
+      "u2_6 = 0.0\n",
+      "u2_86 = 0.0\n",
       "u2_87 = 0.0\n",
       "u2_93 = 0.0\n",
-      "u3_0 = 4e-12\n",
+      "u3_0 = 0.33333333\n",
       "u3_100 = 0.0\n",
-      "u3_54 = 5e-12\n",
-      "u3_56 = 5e-12\n",
+      "u3_54 = 0.33333333\n",
       "u3_71 = 0.0\n",
       "u3_80 = 0.0\n",
-      "u3_88 = 0.0\n",
       "u4_100 = 0.0\n",
-      "u4_49 = 4e-12\n",
-      "u4_54 = 5e-12\n",
-      "u4_55 = 0.0\n",
-      "u4_60 = 1e-12\n",
-      "u4_61 = 4e-12\n",
-      "u4_67 = 0.0\n",
+      "u4_49 = 0.33333333\n",
+      "u4_54 = 0.33333333\n",
+      "u4_55 = 0.33333333\n",
+      "u4_60 = 0.33333333\n",
+      "u4_61 = 0.0\n",
       "u4_73 = 0.0\n",
       "u4_75 = 0.0\n"
      ]
@@ -636,17 +652,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0, 0.0, 1e-12, 2e-12, -2e-12, -1e-12, 0.0, 1e-12, 2e-12, 0.0, 0.0]\n",
-      "[0.0, 1e-12, 0.0, 0.0, 1e-12, 1e-12, 0.0, 0.0, 0.0]\n",
-      "[4e-12, 5e-12, 5e-12, 0.0, 0.0, 0.0, 0.0]\n",
-      "[4e-12, 5e-12, 0.0, 1e-12, 4e-12, 0.0, 0.0, 0.0, 0.0]\n"
+      "[0.33333333, 0.33333333, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[-5.5511151e-17, 0.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[0.33333333, 0.33333333, 0.0, 0.0, 0.0]\n",
+      "[0.33333333, 0.33333333, 0.33333333, 0.33333333, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
