aded weight manipulation

--- a/proj1.ipynb
+++ b/proj1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "26  0.80  0.06  1.00  0.67"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,12 +430,16 @@
     "# monotonicity\n",
     "for u in us:\n",
     "    for a, b in zip(u, u[1:]):\n",
-    "        prob += a >= b\n"
+    "        prob += a >= b\n",
+    "\n",
+    "# manipulating weights\n",
+    "prob += u3_0 >= u1_32 + u2_3 + 0.07\n",
+    "prob += u4_49 >= u1_32 + u2_3 + 0.07\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -525,6 +529,10 @@
        "\n",
        "_C28: - u4_100 + u4_75 >= 0\n",
        "\n",
+       "_C29: - u1_32 - u2_03 + u3_0 >= 0.07\n",
+       "\n",
+       "_C30: - u1_32 - u2_03 + u4_49 >= 0.07\n",
+       "\n",
        "VARIABLES\n",
        "e Continuous\n",
        "u1_100 Continuous\n",
@@ -561,7 +569,7 @@
        "u4_75 Continuous"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -583,31 +591,31 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /var/data/python/lib/python3.11/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/a2b59f94e21d4ff493f7756251efc607-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/a2b59f94e21d4ff493f7756251efc607-pulp.sol (default strategy 1)\n",
+      "command line - /var/data/python/lib/python3.11/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/9717afdf373f48ecac62357ab096293a-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/9717afdf373f48ecac62357ab096293a-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
-      "At line 43 COLUMNS\n",
-      "At line 150 RHS\n",
-      "At line 189 BOUNDS\n",
-      "At line 190 ENDATA\n",
-      "Problem MODEL has 38 rows, 33 columns and 103 elements\n",
+      "At line 45 COLUMNS\n",
+      "At line 158 RHS\n",
+      "At line 199 BOUNDS\n",
+      "At line 200 ENDATA\n",
+      "Problem MODEL has 40 rows, 33 columns and 109 elements\n",
       "Coin0008I MODEL read with 0 errors\n",
       "Option for timeMode changed from cpu to elapsed\n",
-      "Presolve 20 (-18) rows, 19 (-14) columns and 72 (-31) elements\n",
+      "Presolve 22 (-18) rows, 19 (-14) columns and 76 (-33) elements\n",
       "Perturbing problem by 0.001% of 1 - largest nonzero change 9.4100543e-05 ( 0.0094100543%) - largest zero change 9.3128486e-05\n",
-      "0  Obj -0 Primal inf 1.999998 (2) Dual inf 0.9999049 (1)\n",
-      "13  Obj 0.33317977\n",
-      "Optimal - objective value 0.33333333\n",
-      "After Postsolve, objective 0.33333333, infeasibilities - dual 0 (0), primal 0 (0)\n",
-      "Optimal objective 0.3333333333 - 13 iterations time 0.002, Presolve 0.00\n",
+      "0  Obj -0 Primal inf 4.139996 (4) Dual inf 0.9999049 (1)\n",
+      "15  Obj 0.2865186\n",
+      "Optimal - objective value 0.28666667\n",
+      "After Postsolve, objective 0.28666667, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Optimal objective 0.2866666667 - 15 iterations time 0.002, Presolve 0.00\n",
       "Option for printingOptions changed from normal to all\n",
       "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
       "\n",
       "Status: Optimal\n",
-      "e = 0.33333333\n",
+      "e = 0.28666667\n",
       "u1_100 = 0.0\n",
-      "u1_32 = 0.33333333\n",
-      "u1_45 = 0.33333333\n",
+      "u1_32 = 0.28666667\n",
+      "u1_45 = 0.28666667\n",
       "u1_48 = 0.0\n",
       "u1_60 = 0.0\n",
       "u1_64 = 0.0\n",
@@ -615,7 +623,7 @@
       "u1_74 = 0.0\n",
       "u1_76 = 0.0\n",
       "u1_87 = 0.0\n",
-      "u2_03 = -5.5511151e-17\n",
+      "u2_03 = -0.0\n",
       "u2_100 = 0.0\n",
       "u2_25 = 0.0\n",
       "u2_30 = -0.0\n",
@@ -624,16 +632,16 @@
       "u2_86 = 0.0\n",
       "u2_87 = 0.0\n",
       "u2_93 = 0.0\n",
-      "u3_0 = 0.33333333\n",
+      "u3_0 = 0.35666667\n",
       "u3_100 = 0.0\n",
-      "u3_54 = 0.33333333\n",
+      "u3_54 = 0.35666667\n",
       "u3_71 = 0.0\n",
       "u3_80 = 0.0\n",
       "u4_100 = 0.0\n",
-      "u4_49 = 0.33333333\n",
-      "u4_54 = 0.33333333\n",
-      "u4_55 = 0.33333333\n",
-      "u4_60 = 0.33333333\n",
+      "u4_49 = 0.35666667\n",
+      "u4_54 = 0.35666667\n",
+      "u4_55 = 0.35666667\n",
+      "u4_60 = 0.35666667\n",
       "u4_61 = 0.0\n",
       "u4_73 = 0.0\n",
       "u4_75 = 0.0\n"
@@ -652,17 +660,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.33333333, 0.33333333, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[-5.5511151e-17, 0.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[0.33333333, 0.33333333, 0.0, 0.0, 0.0]\n",
-      "[0.33333333, 0.33333333, 0.33333333, 0.33333333, 0.0, 0.0, 0.0, 0.0]\n"
+      "[0.28666667, 0.28666667, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[-0.0, 0.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[0.35666667, 0.35666667, 0.0, 0.0, 0.0]\n",
+      "[0.35666667, 0.35666667, 0.35666667, 0.35666667, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
