added variant equations

--- a/variants.ipynb
+++ b/variants.ipynb
@@ -21,162 +21,189 @@
     "u2_93 = LpVariable(\"u2_93\", lowBound=0) # u2_93>=0\n",
     "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
     "u4_73 = LpVariable(\"u4_73\", lowBound=0) # u4_73>=0\n",
+    "# u1_60 + u2_93 + u3_0 + u4_73\n",
     "\n",
     "# variant 1\n",
     "u1_66 = LpVariable(\"u1_66\", lowBound=0) # u1_66>=0\n",
     "u2_55 = LpVariable(\"u2_55\", lowBound=0) # u2_55>=0\n",
     "u3_45 = LpVariable(\"u3_45\", lowBound=0) # u3_45>=0\n",
     "u4_49 = LpVariable(\"u4_49\", lowBound=0) # u4_49>=0\n",
+    "# u1_66 + u2_55 + u3_45 + u4_49\n",
     "\n",
     "# variant 2\n",
     "u1_100 = LpVariable(\"u1_100\", lowBound=0) # u1_100>=0\n",
     "u2_45 = LpVariable(\"u2_45\", lowBound=0) # u2_45>=0\n",
     "u3_57 = LpVariable(\"u3_57\", lowBound=0) # u3_57>=0\n",
     "u4_50 = LpVariable(\"u4_50\", lowBound=0) # u4_50>=0\n",
+    "# u1_100 + u2_45 + u3_57 + u4_50\n",
     "\n",
     "# variant 3\n",
     "u1_48 = LpVariable(\"u1_48\", lowBound=0) # u1_48>=0\n",
     "u2_87 = LpVariable(\"u2_87\", lowBound=0) # u2_87>=0\n",
     "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
     "u4_75 = LpVariable(\"u4_75\", lowBound=0) # u4_75>=0\n",
+    "# u1_48 + u2_87 + u3_0 + u4_75\n",
     "\n",
     "# variant 4\n",
     "u1_62 = LpVariable(\"u1_62\", lowBound=0) # u1_62>=0\n",
     "u2_40 = LpVariable(\"u2_40\", lowBound=0) # u2_40>=0\n",
     "u3_56 = LpVariable(\"u3_56\", lowBound=0) # u3_56>=0\n",
     "u4_50 = LpVariable(\"u4_50\", lowBound=0) # u4_50>=0\n",
+    "# u1_62 + u2_40 + u3_56 + u4_450\n",
     "\n",
     "# variant 5\n",
     "u1_78 = LpVariable(\"u1_78\", lowBound=0) # u1_78>=0\n",
     "u2_27 = LpVariable(\"u2_27\", lowBound=0) # u2_27>=0\n",
     "u3_71 = LpVariable(\"u3_71\", lowBound=0) # u3_71>=0\n",
     "u4_50 = LpVariable(\"u4_50\", lowBound=0) # u4_50>=0\n",
+    "# u1_78 + u2_27 + u3_71 + u4_50\n",
     "\n",
     "# variant 6\n",
     "u1_40 = LpVariable(\"u1_40\", lowBound=0) # u1_40>=0\n",
     "u2_90 = LpVariable(\"u2_90\", lowBound=0) # u2_90>=0\n",
     "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
     "u4_82 = LpVariable(\"u4_82\", lowBound=0) # u4_82>=0\n",
+    "# u1_40 + u2_90 + u3_0 + u4_82\n",
     "\n",
     "# variant 7\n",
     "u1_64 = LpVariable(\"u1_64\", lowBound=0) # u1_64>=0\n",
     "u2_44 = LpVariable(\"u2_44\", lowBound=0) # u2_44>=0\n",
     "u3_54 = LpVariable(\"u3_54\", lowBound=0) # u3_54>=0\n",
     "u4_54 = LpVariable(\"u4_54\", lowBound=0) # u4_54>=0\n",
+    "# u1_64 + u2_44 + u3_54 + u4_54\n",
     "\n",
     "# variant 8\n",
     "u1_65 = LpVariable(\"u1_65\", lowBound=0) # u1_65>=0\n",
     "u2_30 = LpVariable(\"u2_30\", lowBound=0) # u2_30>=0\n",
     "u3_71 = LpVariable(\"u3_71\", lowBound=0) # u3_71>=0\n",
     "u4_55 = LpVariable(\"u4_55\", lowBound=0) # u4_55>=0\n",
+    "# u1_65 + u2_30 + u3_71 + u4_55\n",
     "\n",
     "# variant 9\n",
     "u1_45 = LpVariable(\"u1_45\", lowBound=0) # u1_45>=0\n",
     "u2_86 = LpVariable(\"u2_86\", lowBound=0) # u2_86>=0\n",
     "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
     "u4_73 = LpVariable(\"u4_73\", lowBound=0) # u4_73>=0\n",
+    "# u1_45 + u2_86 + u3_0 + u4_73\n",
     "\n",
     "# variant 10\n",
     "u1_61 = LpVariable(\"u1_61\", lowBound=0) # u1_61>=0\n",
     "u2_54 = LpVariable(\"u2_54\", lowBound=0) # u2_54>=0\n",
     "u3_38 = LpVariable(\"u3_38\", lowBound=0) # u3_38>=0\n",
     "u4_49 = LpVariable(\"u4_49\", lowBound=0) # u4_49>=0\n",
+    "# u1_61 + u2_54 + u3_38 + u4_49\n",
     "\n",
     "# variant 11\n",
     "u1_74 = LpVariable(\"u1_74\", lowBound=0) # u1_74>=0\n",
     "u2_25 = LpVariable(\"u2_25\", lowBound=0) # u2_25>=0\n",
     "u3_80 = LpVariable(\"u3_80\", lowBound=0) # u3_80>=0\n",
     "u4_49 = LpVariable(\"u4_49\", lowBound=0) # u4_49>=0\n",
+    "# u1_74 + u2_25 + u3_80 + u4_49\n",
     "\n",
     "# variant 12\n",
     "u1_48 = LpVariable(\"u1_48\", lowBound=0) # u1_48>=0\n",
     "u2_97 = LpVariable(\"u2_97\", lowBound=0) # u2_97>=0\n",
     "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
     "u4_91 = LpVariable(\"u4_91\", lowBound=0) # u4_91>=0\n",
+    "# u1_48 + u2_97 + u3_0 + u4_91\n",
     "\n",
     "# variant 13\n",
     "u1_69 = LpVariable(\"u1_69\", lowBound=0) # u1_69>=0\n",
     "u2_49 = LpVariable(\"u2_49\", lowBound=0) # u2_49>=0\n",
     "u3_56 = LpVariable(\"u3_56\", lowBound=0) # u3_56>=0\n",
     "u4_61 = LpVariable(\"u4_61\", lowBound=0) # u4_61>=0\n",
+    "# u1_69 + u2_49 + u3_56 + u4_61\n",
     "\n",
     "# variant 14\n",
     "u1_87 = LpVariable(\"u1_87\", lowBound=0) # u1_87>=0\n",
     "u2_3 = LpVariable(\"u2_3\", lowBound=0) # u2_3>=0\n",
     "u3_100 = LpVariable(\"u3_100\", lowBound=0) # u3_100>=0\n",
     "u4_61 = LpVariable(\"u4_61\", lowBound=0) # u4_61>=0\n",
+    "# u1_87 + u2_3 + u3_100 + u4_61\n",
     "\n",
     "# variant 15\n",
     "u1_44 = LpVariable(\"u1_44\", lowBound=0) # u1_44>=0\n",
     "u2_95 = LpVariable(\"u2_95\", lowBound=0) # u2_95>=0\n",
     "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
     "u4_90 = LpVariable(\"u4_90\", lowBound=0) # u4_90>=0\n",
+    "# u1_44 + u2_95 + u3_0 + u4_90\n",
     "\n",
     "# variant 16\n",
     "u1_68 = LpVariable(\"u1_68\", lowBound=0) # u1_68>=0\n",
     "u2_40 = LpVariable(\"u2_40\", lowBound=0) # u2_40>=0\n",
     "u3_65 = LpVariable(\"u3_65\", lowBound=0) # u3_65>=0\n",
     "u4_60 = LpVariable(\"u4_60\", lowBound=0) # u4_60>=0\n",
+    "# u1_68 + u2_40 + u3_65 + u4_60\n",
     "\n",
     "# variant 17\n",
     "u1_76 = LpVariable(\"u1_76\", lowBound=0) # u1_76>=0\n",
     "u2_6 = LpVariable(\"u2_6\", lowBound=0) # u2_6>=0\n",
     "u3_100 = LpVariable(\"u3_100\", lowBound=0) # u3_100>=0\n",
     "u4_60 = LpVariable(\"u4_60\", lowBound=0) # u4_60>=0\n",
+    "# u1_76 + u2_6 + u3_100 + u4_60\n",
     "\n",
     "# variant 18\n",
     "u1_35 = LpVariable(\"u1_35\", lowBound=0) # u1_35>=0\n",
     "u2_91 = LpVariable(\"u2_91\", lowBound=0) # u2_91>=0\n",
     "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
     "u4_98 = LpVariable(\"u4_98\", lowBound=0) # u4_98>=0\n",
+    "# u1_35 + u2_91 + u3_0 + u4_98\n",
     "\n",
     "# variant 19\n",
     "u1_64 = LpVariable(\"u1_64\", lowBound=0) # u1_64>=0\n",
     "u2_22 = LpVariable(\"u2_22\", lowBound=0) # u2_22>=0\n",
     "u3_81 = LpVariable(\"u3_81\", lowBound=0) # u3_81>=0\n",
     "u4_65 = LpVariable(\"u4_65\", lowBound=0) # u4_65>=0\n",
+    "# u1_64 + u2_22 + u3_81 + u4_65\n",
     "\n",
     "# variant 20\n",
     "u1_83 = LpVariable(\"u1_83\", lowBound=0) # u1_83>=0\n",
     "u2_25 = LpVariable(\"u2_25\", lowBound=0) # u2_25>=0\n",
     "u3_80 = LpVariable(\"u3_80\", lowBound=0) # u3_80>=0\n",
     "u4_65 = LpVariable(\"u4_65\", lowBound=0) # u4_65>=0\n",
+    "# u1_83 + u2_25 + u3_80 + u4_65\n",
     "\n",
     "# variant 21\n",
     "u1_32 = LpVariable(\"u1_32\", lowBound=0) # u1_32>=0\n",
     "u2_83 = LpVariable(\"u2_83\", lowBound=0) # u2_83>=0\n",
     "u3_0 = LpVariable(\"u3_0\", lowBound=0) # u3_0>=0\n",
     "u4_94 = LpVariable(\"u4_94\", lowBound=0) # u4_94>=0\n",
+    "# u1_32 + u2_83 + u3_0 + u4_94\n",
     "\n",
     "# variant 22\n",
     "u1_59 = LpVariable(\"u1_59\", lowBound=0) # u1_59>=0\n",
     "u2_24 = LpVariable(\"u2_24\", lowBound=0) # u2_24>=0\n",
     "u3_70 = LpVariable(\"u3_70\", lowBound=0) # u3_70>=0\n",
     "u4_63 = LpVariable(\"u4_63\", lowBound=0) # u4_63>=0\n",
+    "# u1_59 + u2_24 + u3_70 + u4_63\n",
     "\n",
     "# variant 23\n",
     "u1_73 = LpVariable(\"u1_73\", lowBound=0) # u1_73>=0\n",
     "u2_3 = LpVariable(\"u2_3\", lowBound=0) # u2_3>=0\n",
     "u3_100 = LpVariable(\"u3_100\", lowBound=0) # u3_100>=0\n",
     "u4_63 = LpVariable(\"u4_63\", lowBound=0) # u4_63>=0\n",
+    "# u1_73 + u2_3 + u3_100 + u4_63\n",
     "\n",
     "# variant 24\n",
     "u1_34 = LpVariable(\"u1_34\", lowBound=0) # u1_34>=0\n",
     "u2_100 = LpVariable(\"u2_100\", lowBound=0) # u2_100>=0\n",
     "u3_100 = LpVariable(\"u3_100\", lowBound=0) # u3_100=0\n",
     "u4_100 = LpVariable(\"u4_100\", lowBound=0) # u4_100>=0\n",
+    "# u1_34 + u2_100 + u3_100 + u4_100\n",
     "\n",
     "# variant 25\n",
     "u1_71 = LpVariable(\"u1_71\", lowBound=0) # u1_71>=0\n",
     "u2_25 = LpVariable(\"u2_25\", lowBound=0) # u2_25>=0\n",
     "u3_88 = LpVariable(\"u3_88\", lowBound=0) # u3_88>=0\n",
     "u4_67 = LpVariable(\"u4_67\", lowBound=0) # u4_67>=0\n",
+    "# u1_71 + u2_25 + u3_88 + u4_67\n",
     "\n",
     "# variant 26\n",
     "u1_80 = LpVariable(\"u1_80\", lowBound=0) # u1_80>=0\n",
     "u2_6 = LpVariable(\"u2_6\", lowBound=0) # u2_6>=0\n",
     "u3_100 = LpVariable(\"u3_100\", lowBound=0) # u3_100>=0\n",
-    "u4_67 = LpVariable(\"u4_67\", lowBound=0) # u4_67>=0"
+    "u4_67 = LpVariable(\"u4_67\", lowBound=0) # u4_67>=0\n",
+    "# u1_80 + u2_6 + u3_100 + u4_67"
    ]
   }
  ],
